# akonadi-decsync-resource

./: .dir-locals.el  .gitignore  .gitmodules  CMakeLists.txt  README.org
src/: CMakeLists.txt  debug.cpp  debug.h  decsyncresource.cpp  decsyncresource.desktop  decsyncresource.h  settings.kcfg
test/: config.xml  test.sh
test/xdgdata/akonadi/agents/: decsyncresource.desktop
